[metadata]
name = plexus
version = 0.0.2
author = lab_O_125
author_email = aa.buryak@physics.msu.ru
description = Simple framework for plant science experiments control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/houseofbigseals/plexus
project_urls =
    Bug Tracker = https://github.com/houseofbigseals/plexus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
install_requires =
	zmq
	tornado
	numpy
python_requires = >=3.6

[options.packages.find]
where = src
#include=example_package, example_package_2
